--- a/build.gradle
+++ b/build.gradle
@@ -34,5 +34,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     // HttpClient
     compile('org.apache.httpcomponents:httpclient:4.5.3')
+    // Redis
+    compile('org.springframework.boot:spring-boot-starter-data-redis')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
