--- a/build.gradle
+++ b/build.gradle
@@ -36,5 +36,7 @@ dependencies {
     compile('org.apache.httpcomponents:httpclient:4.5.3')
     // Redis
     compile('org.springframework.boot:spring-boot-starter-data-redis')
+    // Quartz
+    compile('org.springframework.boot:spring-boot-starter-quartz')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
